<resources>
    <string name="app_name">COSC330Project1</string>
    <string name="get_started">Get Started</string>
    <string name="login">Log In</string>
    <string name="health_lingo_label">Definitions</string>
    <string name="chapter_1_label">Health Care</string>
    <string name="chapter_2_label">Doctors</string>
    <string name="chapter_3_label">Medicine</string>
    <string name="chapter_4_label">Healthy Food</string>
    <string name="chapter_5_label">Staying Healthy</string>
    <string name="glossary_label">Words And Definitions</string>
    <string name="cultural_competence_word">Cultural Competence</string>
    <string name="cultural_competence_definition">Behaviors, attitudes and policies that come together,
        between people of differing cultures, that enables them to work together
        effectively.</string>
    <string name="numeracy_word">Numeracy</string>
    <string name="numeracy_definition">The ability to understand mathematical information
        to manage mathematical demands in a range of situations.</string>
    <string name="plain_language_word">Plain Language</string>
    <string name="plain_language_definition">Writing that is clear and to the point which takes
        less time to read and understand.</string>
    <string name="literacy_word">Literacy</string>
    <string name="literacy_definition">Is understanding written words such that you can participate
        in society, meet your goals and develop your knowledge and potential.</string>
    <string name="health_literacy_word">Health Literacy</string>
    <string name="health_literacy_definition">The degree that a person can understand basic
        health information and available services so that you can make appropriate health
        choices.</string>
    <string name="population_health_word">Population Health</string>
    <string name="population_health_definition">Moving resources from the hospital into the community
        to support all aspects of wellness (examples: disease management, support groups, timely
        treatment to avoid serious illness, home visits) by empowering people to take
        responsibility for their own wellness.</string>
    <string name="co_pay_wlactivity_q1">When you pay a set fee every time you go to the doctor and your </string>
    <string name="co_pay_wlactivity_q2"> pays the rest</string>
    <string name="co_pay_wlactivity_a">health insurance</string>
    <string name="emergency_wlactivity_q">When there is </string>
    <string name="emergency_wlactivity_a">a serious problem and you need help right away</string>
    <string name="health_insurance_wlactivity_q1">A program where you pay each </string>
    <string name="health_insurance_wlactivity_q2"> and then the program pays for your health care</string>
    <string name="health_insurance_wlactivity_a">month</string>
    <string name="primary_care_center_wlactivity_q">A place where you go for all your basic health care needs. It could be </string>
    <string name="primary_care_center_wlactivity_a">a health center, health clinic, or doctor\'s office</string>
    <string name="allergy_wlactivty_q">Reaction to certain foods, medications, products, etc may cause </string>
    <string name="allergy_wlactivty_a">rash, hives, sneezing, or other problems</string>
    <string name="symptoms_wlactivity_q">Something that happens in the body that shows you have an </string>
    <string name="symptoms_wlactivity_a">injury or illness</string>
    <string name="otc_wlactivity_q">Medicine anyone can buy at a </string>
    <string name="otc_wlactivity_a">pharmacy</string>
    <string name="prescription_wlactivity_q1">You need one of these from a </string>
    <string name="prescription_wlactivity_q2"> to buy certain medicines</string>
    <string name="prescription_wlactivity_a">doctor</string>
    <string name="side_effect_wlactivity_q1">An </string>
    <string name="side_effect_wlactivity_q2"> you get from taking some medicines</string>
    <string name="side_effect_wlactivity_a">unwanted result or symptom</string>
    <string name="obesity_wlactivity_q">Being very overweight, a weight that is </string>
    <string name="obesity_wlactivity_a">dangerous for your health</string>
    <string name="sodium_wlactivity_q1">Another word for </string>
    <string name="sodium_wlactivity_q2">. Should be eaten in limited amounts</string>
    <string name="sodium_wlactivity_a">salt</string>
    <string name="header_picture">Picture</string>
    <string name="header_word">Word</string>
    <string name="header_pronounce">How do I say it?</string>
    <string name="header_meaning">What does it mean?</string>
</resources>