<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/encapsulating_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B8DFE8"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:id="@+id/header_picture"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:background="#DDDDDD"
            android:text="@string/header_picture"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/header_word"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#82B5DD"
            android:text="@string/header_word"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/header_pronounce"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:background="#DDDDDD"
            android:text="@string/header_pronounce"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/header_meaning"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="#82B5DD"
            android:text="@string/header_meaning"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="1dp" />
</LinearLayout>